fix page cell phone reload.

--- a/challenge-files/12 - Key Sequence Detection/index.html
+++ b/challenge-files/12 - Key Sequence Detection/index.html
@@ -18,6 +18,7 @@
           <input type="text" name="secret-code" id="secret-word" placeholder="Type the secret word here...">
           <span class="error-answer"></span>
         </div>
+        <button class="refresh-page">Click to get a new Secret Word!</button>
       </main>
       <audio id="right-answer-sound" src="media/you-win-sound-effect-5.mp3"></audio>
     </section>
